--- a/main_architecture.ipynb
+++ b/main_architecture.ipynb
@@ -13,6 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#importing required packages\n",
     "import numpy as np\n",
     "import os\n",
     "import tensorflow as tf\n",
