--- a/post_processing.ipynb
+++ b/post_processing.ipynb
@@ -13,6 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#importing required packages\n",
     "import cv2\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
